--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <md-toolbar color="primary"></md-toolbar>
+<button md-raised-button color="accent">What up?</button>
 <h1 class="test">Hello {{name}}</h1>
