--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -5,7 +5,7 @@
 @include mat-core()
 
 $gprostV1-app-primary: mat-palette($mat-amber)
-$gprostV1-app-accent:  mat-palette($mat-teal, A200, A100, A400)
+$gprostV1-app-accent:  mat-palette($mat-indigo, A200, A100, A400)
 
 $gprostV1-app-theme: mat-light-theme($gprostV1-app-primary, $gprostV1-app-accent)
 
