--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<md-toolbar color="primary"></md-toolbar>
-<button md-raised-button color="accent">What up?</button>
-<button md-fab color="accent">Oh</button>
-<h1 class="test">Hello {{name}}</h1>
+<header>Header</header>
+<router-outlet></router-outlet>
+<footer>Footer</footer>
