Update app global styles

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -10,3 +10,12 @@ $gprostV1-app-accent:  mat-palette($mat-indigo, A200, A100, A400)
 $gprostV1-app-theme: mat-light-theme($gprostV1-app-primary, $gprostV1-app-accent)
 
 @include angular-material-theme($gprostV1-app-theme)
+
+//global app styles
+.app-container
+  min-height: 100vh
+  position: relative
+
+.footer
+  position: absolute
+  bottom: 0
