--- a/src/app/view/organisms/Header/component.html
+++ b/src/app/view/organisms/Header/component.html
@@ -1,3 +1,13 @@
-<md-tab-group [selectedIndex]="getActiveTabIndx()" (selectChange)="onTabClick($event)">
-  <md-tab *ngFor="let tab of tabs" [label]="tab.label"></md-tab>
-</md-tab-group>
+<md-toolbar color="primary">
+  <button md-icon-button class="test"></button>
+  <div>
+    <button
+      md-raised-button
+      *ngFor="let tab of tabs"
+      color="accent"
+      (click)="onBtnClick(tab.path)"
+    >
+      {{tab.label}}
+    </button>
+  </div>
+</md-toolbar>
