--- a/src/app/view/angular-material/index.scss
+++ b/src/app/view/angular-material/index.scss
@@ -1,11 +1,23 @@
+@import "../../../breakpoints";
+
 .mat-button, .mat-fab, .mat-icon-button, .mat-mini-fab, .mat-raised-button {
   font-size: 12px !important;
+  
+  @media #{$sm} {
+    font-size: 14px !important;
+  }
 }
 
 .mat-button, .mat-raised-button {
   min-width: 65px !important;
   padding: 0 12px !important;
   line-height: 31px !important;
+  
+  @media #{$sm} {
+    min-width: 88px !important;
+    padding: 0 16px !important;
+    line-height: 36px !important;
+  }
 }
 
 .mat-toolbar {
@@ -16,16 +28,4 @@
   width: 33px !important;
   height: 33px !important;
   line-height: 33px !important;
-}
-
-@media (min-width: 600px) {
-  .mat-button, .mat-fab, .mat-icon-button, .mat-mini-fab, .mat-raised-button {
-    font-size: 14px !important;
-  }
-
-  .mat-button, .mat-raised-button {
-    min-width: 88px !important;
-    padding: 0 16px !important;
-    line-height: 36px !important;
-  }
 }
