--- a/src/app/view/organisms/Header/component.scss
+++ b/src/app/view/organisms/Header/component.scss
@@ -1,10 +1,12 @@
+@import "../../../../breakpoints";
+
 .tabs-container {
   width: 8.4rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
 
-  @media (min-width: 600px) {
+  @media #{$sm} {
     width: 11.4rem;
   }
 }
