--- a/src/app/view/angular-material/index.scss
+++ b/src/app/view/angular-material/index.scss
@@ -3,7 +3,7 @@
 .mat-button, .mat-fab, .mat-icon-button, .mat-mini-fab, .mat-raised-button {
   font-size: 12px !important;
   
-  @media #{$sm} {
+  @media #{$gt-xs} {
     font-size: 14px !important;
   }
 }
@@ -13,7 +13,7 @@
   padding: 0 12px !important;
   line-height: 31px !important;
   
-  @media #{$sm} {
+  @media #{$gt-xs} {
     min-width: 88px !important;
     padding: 0 16px !important;
     line-height: 36px !important;
