--- a/src/app/view/organisms/Header/component.scss
+++ b/src/app/view/organisms/Header/component.scss
@@ -6,7 +6,7 @@
   justify-content: space-between;
   align-items: center;
 
-  @media #{$sm} {
+  @media #{$gt-xs} {
     width: 11.4rem;
   }
 }
@@ -16,6 +16,8 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
 }
 
 .avatar-btn {
@@ -26,7 +28,6 @@
   border-radius: 50%;
   outline: none;
   border: none;
-  cursor: pointer;
   padding: 0;
   margin: 0;
 }
