--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,7 @@
+@import "../sass-vars/breakpoints";
+@import "../sass-vars/header";
+@import "../sass-vars/footer";
+
 :host {
   min-height: 100vh;
   position: relative;
@@ -8,13 +12,17 @@
 
 .main {
   overflow: hidden;
+  overflow-y: auto;
+  margin-bottom: auto;
+  height: calc(100vh - #{$header-height-xs} - #{$footer-height-xs});
+  
+  @media #{$gt-xs} {
+    height: calc(100vh - #{$header-height-gt-xs} - #{$footer-height-gt-xs});
+  }
 }
 
 .template-container {
   position: relative;
   max-width: 960px;
   margin: 3rem auto;
-}
-
-.footer {
 }
