--- a/src/app/view/angular-material/index.scss
+++ b/src/app/view/angular-material/index.scss
@@ -1,4 +1,4 @@
-@import "../../../breakpoints";
+@import "../../../sass-vars/breakpoints";
 
 .mat-button, .mat-fab, .mat-icon-button, .mat-mini-fab, .mat-raised-button {
   font-size: 12px !important;
