--- a/src/app/view/organisms/Header/component.scss
+++ b/src/app/view/organisms/Header/component.scss
@@ -1,4 +1,14 @@
-@import "../../../../breakpoints";
+@import "../../../../sass-vars/breakpoints";
+@import "../../../../sass-vars/header";
+
+:host {
+  z-index: 10;
+  height: $header-height-xs;
+  
+  @media #{$gt-xs} {
+    height: $header-height-gt-xs;
+  }
+}
 
 .tabs-container {
   width: 8.4rem;
