--- a/src/app/view/atoms/Footer/component.scss
+++ b/src/app/view/atoms/Footer/component.scss
@@ -1,10 +1,12 @@
 @import "../../../../sass-vars/breakpoints";
 @import "../../../../sass-vars/footer";
+@import "../../../../sass-vars/palette-colors";
 
 :host {
   z-index: 10;
   height: $footer-height-xs;
-  box-shadow: 0 1px 6px 1px rgba(100, 100, 100, 0.3);
+  box-shadow: 0 -1px 8px 1px rgba(100, 100, 100, 0.3);
+  background: $primary;
   
   @media #{$gt-xs} {
     height: $footer-height-gt-xs;
