--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,8 +21,15 @@
   }
 }
 
+$margin: 3rem;
 .template-container {
   position: relative;
   max-width: 960px;
   margin: 3rem auto;
+  padding: 0 4rem;
+  min-height: calc(100vh - #{$header-height-xs} - #{$footer-height-xs} - #{2 * $margin});
+  
+  @media #{$gt-xs} {
+    min-height: calc(100vh - #{$header-height-gt-xs} - #{$footer-height-gt-xs} - #{2 * $margin});
+  }
 }
