--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import '~normalize.css';
+@import './sass-vars/breakpoints';
 
 // Angular Material theming
 @import '~@angular/material/theming';
@@ -14,15 +15,29 @@ $gprostV1-app-theme: mat-light-theme($gprostV1-app-primary, $gprostV1-app-accent
 
 // Global styles
 
+html {
+  font-size: 13.5px;
+  
+  @media #{$gt-xs} {
+    font-size: 16px;
+  }
+}
+
 body {
   font-family: 'Open Sans', sans-serif;
   color: #636261;
-  line-height: 32px;
-  font-size: 19px;
 }
 
 h1 {
   margin-top: 0;
   margin-bottom: 4rem;
-  text-align: center;
+  
+  @media #{$gt-xs} {
+    text-align: center;
+  }
+}
+
+p {
+  line-height: 2rem;
+  font-size: 1.2rem;
 }
