Update LinkedIn link

--- a/src/app/view/molecules/Footer/component.html
+++ b/src/app/view/molecules/Footer/component.html
@@ -1,5 +1,5 @@
 <span fxHide.lt-sm class="author">German Prostakov</span>
 <a class="icon-link" href="https://github.com/GProst"><gp-github-icon></gp-github-icon></a>
 <a class="icon-link" href="http://stackoverflow.com/users/story/7376567"><gp-stack-overflow-icon></gp-stack-overflow-icon></a>
-<a class="icon-link" href="https://www.linkedin.com"><gp-linkedin-icon></gp-linkedin-icon></a>
+<a class="icon-link" href="https://www.linkedin.com/in/german-prostakov-9aa877140/"><gp-linkedin-icon></gp-linkedin-icon></a>
 <a class="icon-link" href="https://twitter.com/GermanProstakov"><gp-twitter-icon></gp-twitter-icon></a>
