Refactor Image comp

--- a/src/app/view/atoms/Image/component.html
+++ b/src/app/view/atoms/Image/component.html
@@ -1,1 +1,1 @@
-<img [class]="imgClass" [attr.src]="src" [attr.srcset]="srcSet" [attr.sizes]="sizes" [attr.alt]="alt" [attr.title]="title" />
+<img [class]="className" [attr.src]="src" [attr.srcset]="srcSet" [attr.sizes]="sizes" [attr.alt]="alt" [attr.title]="title" />
