Add GallerySlider & Update pages layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <gp-header></gp-header>
 <main class="main">
-  <div class="template-container">
-    <router-outlet></router-outlet>
-  </div>
+  <router-outlet></router-outlet>
 </main>
 <gp-footer></gp-footer>
+<gp-gallery-slider-container></gp-gallery-slider-container>
