--- a/src/app/view/pages/About/component.scss
+++ b/src/app/view/pages/About/component.scss
@@ -9,11 +9,11 @@
   width: 100%;
   box-sizing: border-box;
   margin: 0 auto;
-  padding: 4rem 2rem;
+  padding: 0 2rem;
   min-height: calc(100vh - #{$header-height-xs} - #{$footer-height-xs});
   
   @media #{$gt-xs} {
     min-height: calc(100vh - #{$header-height-gt-xs} - #{$footer-height-gt-xs});
-    padding: 4rem 4rem;
+    padding: 0 4rem;
   }
 }
