--- a/src/app/view/organisms/Post/component.html
+++ b/src/app/view/organisms/Post/component.html
@@ -1,8 +1,10 @@
 <gp-img [content]="frontImage" class="front-image-container" [ngStyle]="frontImageContainerStyles"></gp-img>
-<h1 class="title">{{title}}</h1>
-<ng-container *ngFor="let content of mainContent">
-  <p *ngIf="content.type === 'paragraph'" class="paragraph">{{content.payload}}</p>
-  <gp-img *ngIf="content.type === 'img'" class="single-img" [content]="content.payload"></gp-img>
-  <h2 *ngIf="content.type === 'subtitle'" class="subtitle">{{content.payload}}</h2>
-  <gp-gallery *ngIf="content.type === 'gallery'" class="gallery" [images]="content.payload"></gp-gallery>
-</ng-container>
+<article class="post-article" [ngStyle]="articleStyles">
+  <h1 class="title">{{title}}</h1>
+  <ng-container *ngFor="let content of mainContent">
+    <p *ngIf="content.type === 'paragraph'" class="paragraph">{{content.payload}}</p>
+    <gp-img *ngIf="content.type === 'img'" class="single-img" [content]="content.payload"></gp-img>
+    <h2 *ngIf="content.type === 'subtitle'" class="subtitle">{{content.payload}}</h2>
+    <gp-gallery *ngIf="content.type === 'gallery'" class="gallery" [images]="content.payload"></gp-gallery>
+  </ng-container>
+</article>
