Refactor file structure

--- a/src/app/view/pages/About/component.scss
+++ b/src/app/view/pages/About/component.scss
@@ -1,6 +1,6 @@
-@import '../../../../sass-vars/header';
-@import '../../../../sass-vars/footer';
-@import '../../../../sass-vars/breakpoints';
+@import '../../../sass-vars/header';
+@import '../../../sass-vars/footer';
+@import '../../../sass-vars/breakpoints';
 
 :host {
   display: block;
