--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
-@import "../sass-vars/breakpoints";
-@import "../sass-vars/header";
-@import "../sass-vars/footer";
+@import "sass-vars/breakpoints";
+@import "sass-vars/header";
+@import "sass-vars/footer";
 
 :host {
   min-height: 100vh;
