--- a/src/app/view/pages/Posts/component.scss
+++ b/src/app/view/pages/Posts/component.scss
@@ -3,18 +3,20 @@
 @import '../../../sass-vars/breakpoints';
 
 :host {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   position: relative;
   max-width: 960px;
   width: 100%;
   box-sizing: border-box;
   margin: 0 auto;
-  padding: 4rem 2rem;
+  padding: 4rem 0;
   text-align: center;
   min-height: calc(100vh - #{$header-height-xs} - #{$footer-height-xs});
   
   @media #{$gt-xs} {
     min-height: calc(100vh - #{$header-height-gt-xs} - #{$footer-height-gt-xs});
-    padding: 4rem 4rem;
+    padding: 4rem 0;
   }
 }
