--- a/src/app/view/post-list/PostCard/component.scss
+++ b/src/app/view/post-list/PostCard/component.scss
@@ -1,17 +1,24 @@
 @import "../../../sass-vars/breakpoints";
+@import "../../../sass-vars/palette-colors";
+$text-side-padding: 1.4rem;
+
 
 :host {
   margin: 0 1rem;
   background: white;
   cursor: pointer;
+  flex: 1 1 25%;
   box-shadow: 0 2px 3px 0 rgba(100, 100, 100, 0.3);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .thumbnail {
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  height: 12rem;
+  height: 10rem;
 }
 
 .thumbnail /deep/ img {
@@ -19,6 +26,37 @@
   transition: transform 3s ease-in-out;
   height: 100%;
   object-fit: cover;
+}
+
+.text-container {
+  padding: 0 $text-side-padding;
+  margin-bottom: auto;
+}
+
+.title, .paragraph {
+  text-align: left;
+}
+
+.title {
+  font-weight: 400;
+  color: #444444;
+  font-size: 1.4rem;
+  line-height: 1.9rem;
+  margin: 1.7rem 0 1.9rem;
+  padding-bottom: 0.5rem;
+  border-bottom: 2px solid $primary-dark;
+}
+
+.paragraph {
+  font-size: 0.8rem;
+  line-height: 1.4rem;
+  padding: 0;
+  color: #888888;
+}
+
+.actions-container {
+  padding: 1.5rem $text-side-padding 2rem;
+  text-align: left;
 }
 
 @media (hover: hover) {
