Update PostCard & global btn styles

--- a/src/app/view/post-list/PostCard/component.html
+++ b/src/app/view/post-list/PostCard/component.html
@@ -5,9 +5,10 @@
 </div>
 <div class="actions-container">
   <button
-    md-raised-button
+    md-button
     color="accent"
     class="revert"
+    #readMoreBtn
   >
     Learn more
   </button>
