--- a/src/app/view/post-list/PostCard/component.scss
+++ b/src/app/view/post-list/PostCard/component.scss
@@ -11,16 +11,20 @@ $text-side-padding: 1.4rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 0 1rem;
-  
-  
+  margin: 1rem 0;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -moz-tap-highlight-color: rgba(0, 0, 0, 0);
   
   @media #{$sm} {
     margin: 0 0.4rem;
-    
+  
     &:nth-child(2) {
       margin: 0;
     }
+  }
+  
+  @media #{$gt-sm} {
+    margin: 0 1rem;
   }
 }
 
@@ -28,7 +32,11 @@ $text-side-padding: 1.4rem;
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  height: 10rem;
+  height: 13rem;
+  
+  @media #{$gt-xs} {
+    height: 10rem
+  };
 }
 
 .thumbnail /deep/ img {
