--- a/src/app/view/post-list/PostList/component.scss
+++ b/src/app/view/post-list/PostList/component.scss
@@ -3,4 +3,17 @@
 :host {
   display: flex;
   justify-content: space-around;
+  flex-direction: column;
+  width: 80vw;
+  margin: 0 auto;
+  min-width: 300px;
+  max-width: 400px;
+  
+  @media #{$gt-xs} {
+    flex-direction: row;
+    width: auto;
+    min-width: unset;
+    max-width: unset;
+    margin: initial;
+  }
 }
