--- a/src/app/view/pages/Posts/component.scss
+++ b/src/app/view/pages/Posts/component.scss
@@ -1,8 +1,13 @@
 @import '../../../sass-vars/header';
 @import '../../../sass-vars/footer';
 @import '../../../sass-vars/breakpoints';
+@import '../../../sass-vars/page-container';
 
 :host {
+  @include page-container();
+}
+
+.page-content {
   display: flex;
   flex-direction: column;
   justify-content: center;
