Update all hover css rules

--- a/src/app/view/common-bricks/@icon@LinkedIn/component.scss
+++ b/src/app/view/common-bricks/@icon@LinkedIn/component.scss
@@ -10,10 +10,12 @@
   fill: white;
 }
 
-.svg:hover .container {
-  fill: $accent;
-}
-
 .letter {
   fill: $primary;
+}
+
+@media (hover: hover) {
+  .svg:hover .container {
+    fill: $accent;
+  }
 }
