--- a/src/app/view/common-bricks/@icon@Twitter/component.scss
+++ b/src/app/view/common-bricks/@icon@Twitter/component.scss
@@ -5,8 +5,10 @@
   height: 100%;
   cursor: pointer;
   fill: white;
-}
-
-.svg:hover {
-  fill: $accent;
+  
+  @media (hover: hover) {
+    &:hover {
+      fill: $accent;
+    }
+  }
 }
