Add initial fake post request

--- a/src/app/view/pages/About/component.html
+++ b/src/app/view/pages/About/component.html
@@ -1,3 +1,3 @@
 <div class="page-content">
-  <gp-post [postData]="postData"></gp-post>
+  <gp-post *ngIf="postData" [postData]="postData"></gp-post>
 </div>
