Update Avatar styles

--- a/src/app/view/shared/Header/component.scss
+++ b/src/app/view/shared/Header/component.scss
@@ -33,11 +33,11 @@
 .avatar-btn {
   position: relative;
   background: white;
-  width: 2.8rem;
-  height: 2.8rem;
+  width: 2.9rem;
+  height: 2.9rem;
   border-radius: 50%;
   outline: none;
-  border: none;
+  border: 1px solid white;
   padding: 0;
   margin: 0;
 }
