--- a/src/app/view/post/Gallery/component.scss
+++ b/src/app/view/post/Gallery/component.scss
@@ -10,20 +10,14 @@
 
 .gallery-img {
   flex: 1 1 33%;
+  display: flex;
   margin-right: 0.5%;
   margin-bottom: 0.5%;
   cursor: zoom-in;
   position: relative;
-  height: 29vw;
-  max-height: 20rem;
   
   @-moz-document url-prefix() {
     margin-bottom: 5px !important; // For FireFox: this will create NOT ISOLATED css rule, so be careful
-  }
-  
-  @media #{$gt-sm} {
-    height: 18vw; // FixMe: fix styles when images will be square (no heights at all, they will be auto)
-    max-height: 17rem;
   }
 }
 
