--- a/src/app/view/pages/Posts/component.html
+++ b/src/app/view/pages/Posts/component.html
@@ -1,4 +1,4 @@
 <div class="page-content">
-  <gp-loader *ngIf="fetchingPosts" [class.small-loader]="postsOnceLoaded"></gp-loader>
+  <gp-loader *ngIf="fetchingPosts" class="loader"></gp-loader>
   <gp-post-list *ngIf="posts && !fetchingPosts" [posts]="posts"></gp-post-list>
 </div>
