Create initial pagination component

--- a/src/app/view/post-list/Pagination/component.html
+++ b/src/app/view/post-list/Pagination/component.html
@@ -1,15 +1,2 @@
-<gp-img class="thumbnail" [content]="thumbnail"></gp-img>
-<div class="text-container">
-  <h2 class="title">{{title}}</h2>
-  <p class="paragraph">{{description}}</p>
-</div>
-<div class="actions-container">
-  <button
-    md-button
-    color="accent"
-    class="revert"
-    #readMoreBtn
-  >
-    Learn more
-  </button>
-</div>
+<button type="button" *ngIf="pageNumber > 1" (click)="onPrevButtonClick()">Prev Page</button>
+<button type="button" (click)="onNextButtonClick()">Next Page</button>
