--- a/src/app/view/pages/Posts/component.scss
+++ b/src/app/view/pages/Posts/component.scss
@@ -29,3 +29,10 @@
 .small-loader {
   color: white;
 }
+
+.post-list-container {
+  display: block;
+  position: relative;
+  margin: 0 auto;
+  width: 100%;
+}
