--- a/src/app/view/post-list/PostList/component.scss
+++ b/src/app/view/post-list/PostList/component.scss
@@ -1,6 +1,9 @@
 @import "../../../sass-vars/breakpoints";
 
 :host {
+  position: absolute;
+  top: 0;
+  transform: translate(0, -50%);
   display: flex;
   justify-content: space-around;
   flex-direction: column;
